<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_button"
        android:icon="@drawable/accueil"
        android:title="@string/accueil_bottom_menu_navigation" />
    <item
        android:id="@+id/scan_button"
        android:icon="@drawable/scan"
        android:title="@string/scan_bottom_menu_navigation"/>
    <item
        android:id="@+id/recipe_button"
        android:icon="@drawable/recettes"
        android:title="@string/recettes_bottom_menu_navigation" />
    <item
        android:id="@+id/info_button"
        android:icon="@drawable/infos"
        android:title="@string/infos_bottom_menu_navigation"/>
    <item
        android:id="@+id/friends_button"
        android:icon="@drawable/amis"
        android:title="@string/amis_bottom_menu_navigation"/>
</menu>